--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ethanco.clockfacesample.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <com.ethanco.clockface.ClockfaceView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@android:color/holo_orange_dark" />
 </RelativeLayout>
