--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.ethanco.clockface.ClockfaceView
-        android:layout_width="300dp"
-        android:layout_height="300dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
