--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <com.ethanco.clockface.ClockfaceView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="500dp"
+        android:layout_height="500dp"
+        android:layout_centerInParent="true" />
 </RelativeLayout>
